2005-02-016 Alain Magloire
	PR 84423, Patch from :  Tomaszewski Przemek
	Added keybinding next/previous(CTRL-SHIFT-UP/DOWN) to from
	member to member in the CEditor(PR 84423).

	* NEWS
	* plugin.properties
	* plugin.xml
	* src/org/eclipse/cdt/internal/ui/editor/CEditor.java
	* src/org/eclipse/cdt/internal/ui/editor/CEditorMessages.properties
	* src/org/eclipse/cdt/internal/ui/editor/CSourceViewer.java
	* src/org/eclipse/cdt/internal/ui/editor/ICEditorActionDefinitionIds.java
	
2005-02-02 Bogdan Gheorghe
	Added a delete IProblem Markers action to context menu to allow users to manually
	remove problems reported by the parser during an index.
	
	* src/org/eclipse/cdt/internal/ui/util/DeleteIProblemMarkerAction.java
	* plugin.xml
	* plugin.properties
	
2005-01-29 Alain Magloire
	Fix for 81403: Move the Code Assist preference page
	out of the CEditor preference page.  It clean the CEditorPreferencePage
	and takes less time to instantiate.
	New checkbox in Code Assist to complete common prefix.
	+ src/org/eclipse/cdt/internal/ui/preferences/AbstracPreferencePage.java
	* src/org/eclipse/cdt/internal/ui/prefernces/CEditorPreferencePage.java
	+ src/org/eclipse/cdt/internal/ui/preferences/CodeAssistPreferencge.java
	* src/org/eclipse/cdt/internal/ui/preferences/PreferencesMessage.java
	* src/org/eclipse/cdt/internal/ui/text/contentassist/ContentAssistPreference.java
	* src/org/eclipse/cdt/ui/CUIPrefernceInitializer.java
	* plugin.xml
	* plugin.properties

2005-01-28 Alain Magloire
	Add Indexer search in the Source Hover implementation.
	* src/org/eclipse/cdt/intenal/ui/text/CSourceHover.java

2005-01-28 David Inglis

	Implement Eclipse 3.0 Next/Prev Annonation retargetable actions for CEditor with Problems
	view highlighting.
	
	* plugin.xml
	* src/org/eclipse/cdt/internal/ui/ICHelpContextIds.java
	* src/org/eclipse/cdt/internal/ui/editor/CDocumentProvider.java
	* src/org/eclipse/cdt/internal/ui/editor/CEditor.java